# GLib

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Default.props  GLib.sln  LICENSE.txt  README.md  common.cmake  dockerFile  go.cmd  go.sh  main.yml
.github/workflows/: main-win-coverage.yml  main-win.yml  main.yml
Coverage/: Address.cpp  Address.h  CMakeLists.txt  Chunk.h  Coverage.cpp  Coverage.h  Coverage.rc  Coverage.vcxproj  Coverage.vcxproj.filters  CoverageLevel.h  CppHtmlGenerator.h  Directory.h  FileCoverageData.cpp  FileCoverageData.h  Function.cpp  Function.h  FunctionCoverage.h  FunctionVisitor.h  HtmlPrinter.h  HtmlReport.cpp  HtmlReport.h  Line.h  LineCover.h  Main.cpp  Process.cpp  Process.h  RootDirs.h  SymbolNameUtils.h  Types.h  pch.h  resource.h
Coverage/Template/: coverage.css  directory.html  file.html  functions.html  rootDirectory.html
GLib/: CMakeLists.txt  DurationPrinter.h  FileLogger.cpp  FileLogger.h  Fwd.h  GLib.vcxproj  GLib.vcxproj.filters  Log.cpp  LogManager.cpp  LogState.h  Manipulator.h  Scope.h  StreamInfo.h  buffer.h  filelogger.cpp  filelogger.h  genericoutstream.h  log.cpp  logstate.h  pch.h  scope.h  stdafx.h  streaminfo.h  targetver.h
TestApp/: CMakeLists.txt  Main.cpp  MainWindow.h  TestApp.rc  TestApp.vcxproj  TestApp.vcxproj.filters  resource.h
Tests/: CMakeLists.txt  CheckedCastTests.cpp  ComPtrTests.cpp  CompatTests.cpp  ConverterTests.cpp  CppIteratorTests.cpp  EvaluatorTests.cpp  FlogTests.cpp  FormatterTests.cpp  IcuUtilsTests.cpp  Main.cpp  NoCaseTests.cpp  ScopeTests.cpp  SplitTests.cpp  StackOrHeapTests.cpp  TemplateEngineTests.cpp  TestInterfaces.h  TestStructs.h  TestUtils.h  Tests.vcxproj  Tests.vcxproj.filters  TypeFilterTests.cpp  WinTests.cpp  XmlIteratorTests.cpp  XmlTestUtils.h  Xyzzy.h  wstringfix.h
cmake/: common.cmake
include/GLib/: CheckedCast.h  Compat.h  CompatLinux.h  CompatWindows.h  ConsecutiveFind.h  Cvt.h  Flogging.h  Formatter.h  IcuUtils.h  NoCase.h  PairHash.h  PrintfFormatPolicy.h  Scope.h  Span.h  Split.h  StackOrHeap.h  TypeFilter.h  TypePredicates.h  VectorStreamBuffer.h  XmlPrinter.h  checked_cast.h  compat.h  cvt.h  flogging.h  formatter.h  genericoutstream.h  printfformatpolicy.h  scope.h  split.h  stackorheap.h  vectorstreambuffer.h
include/GLib/Cpp/: HtmlGenerator.h  Iterator.h  StateEngine.h
include/GLib/Eval/: Collection.h  Evaluator.h  TemplateEngine.h  Utils.h  Value.h
include/GLib/Html/: Node.h  TemplateEngine.h
include/GLib/Win/: Automation.h  Bstr.h  ComErrorCheck.h  ComException.h  ComPtr.h  ComUtil.h  ComUtils.h  D2d.h  DebugStream.h  DebugWrite.h  Debugger.h  ErrorCheck.h  FileSystem.h  FormatErrorMessage.h  Handle.h  Local.h  MessageDebug.h  Module.h  NativeExceptionPrinter.h  Painter.h  Process.h  Registry.h  Resources.h  SimpleCom.h  Symbols.h  Transfer.h  Uuid.h  Variant.h  WinException.h  Window.h  WindowFinder.h
include/GLib/Win/Aut/: UIAut.h
include/GLib/Xml/: AttributeIterator.h  Attributes.h  Element.h  Iterator.h  NameSpaceManager.h  Printer.h  StateEngine.h  Utils.h
msvc/: Default.props  GLib.sln  build.build  docker.build  format.build  process.tasks  tidy.build
